--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Tic-Tac-Toe game made by Sparkbox apprentices (2021)",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --exec babel-node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./ --ignore-path .gitignore"
   },
@@ -18,8 +19,16 @@
   },
   "homepage": "https://github.com/sparkbox/apprentice-tic-tac-toe#readme",
   "devDependencies": {
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.1",
+    "@babel/node": "^7.13.0",
+    "@babel/preset-env": "^7.13.8",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
