--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "jest": "^26.6.3"
+    "express": "^4.17.1"
   }
 }
