--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
+    "jest-fetch-mock": "^3.0.3",
     "jsdom": "^16.5.0",
     "nodemon": "^2.0.7"
   },
